docker compose and docker file